--- a/page2.html
+++ b/page2.html
@@ -22,3 +22,19 @@ this is page 2
 
 
 </html>
+
+html {
+  background-color: #B2E6FF;
+}
+
+h1 {
+  text-align: center;
+}
+
+h3 {
+  text-align: center;
+}
+
+p {
+  text-align: center;
+}
